--- a/styles.css
+++ b/styles.css
@@ -144,27 +144,35 @@ body {
   margin-bottom: 20px;
 }
 
-.contact_us {
+.background{
   border: 3px solid pink;
   background-color: #356ead;
 }
 
-.contact_us_content {
-  border: 3px solid white;
-  margin-top: 50px;
-  margin-right: 60%;
-  margin-bottom: 30px;
+.contact_us {
   margin-left: 100px;
+  margin-right: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.contact_us_content h3 {
+.content {
+  border: 3px solid white;
+  margin-top: 50px;
+  margin-right: 50%;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+}
+
+.content h3 {
   font-size: 30px;
   line-height: 30px;
   color: white;
   text-align: left;
 }
 
-.contact_us_content p {
+.content p {
   font-size: 16px;
   line-height: 26px;
   color: lightgray;
@@ -172,11 +180,13 @@ body {
 }
 
 .link_contact {
-  margin-right: 100px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  background-color: lightblue;
+  background-color: #5a98d0;
+  color: white;
+  text-decoration: none;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 hr {
