--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,161 @@ body {
   padding: 0;
 }
 
+.header-menu {
+  border: 3px solid rgb(6, 224, 6);
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 20px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
 
+.header-menu_icons {
+  height: 45px;
+  width: 45px;
+
+}
+
+.general-information {
+  border: 3px solid blue;
+  margin-left: 100px;
+  margin-right: 50%;
+  margin-top: 60px;
+  padding-bottom: 50px;
+  text-align: left;
+}
+
+.general-information h1 {
+  font-size: 64px;
+  text-align: center;
+  color: #1F3F68;
+
+}
+
+.general-information p {
+  font-size: 16px;
+  line-height: 26px;
+  color: #1F3F68;
+  text-align: center;
+}
+
+.about-products {
+  border: 3px solid brown;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 300px;
+  text-align: center;
+  font-size: 36px;
+}
+
+.our-advantages {
+  border: 3px solid purple;
+  margin-top: 20px;
+  margin-left: 100px;
+  margin-right: 70%;
+  margin-bottom: 30px;
+  padding-top: 100px;
+  padding-bottom: 40px;
+}
+
+.our-advantages h4 {
+  text-align: center;
+  font-size: 20px;
+  line-height: 30px;
+  color: #1F3F68;
+}
+
+.our-advantages p {
+  font-size: 16px;
+  line-height: 26px;
+  color: #1F3F68;
+  text-align: center;
+}
+
+.about-us {
+  border: 3px solid orangered;
+  margin-left: 100px;
+  margin-right: 100px;
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+.about-us h4 {
+  font-size: 20px;
+  line-height: 30px;
+  color: #1F3F68;
+}
+
+.about-us p {
+  font-size: 16px;
+  line-height: 26px;
+  color: #1F3F68;
+  padding-right: 200px;
+  padding-left: 200px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+}
+
+.background{
+  border: 3px solid pink;
+  background-color: #356ead;
+}
+
+.contact-us {
+  margin-left: 100px;
+  margin-right: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact-us_content {
+  border: 3px solid black;
+  margin-top: 50px;
+  margin-right: 50%;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+}
+
+.contact-us_content h3 {
+  font-size: 30px;
+  line-height: 30px;
+  color: white;
+  text-align: left;
+}
+
+.contact-us_content p {
+  font-size: 16px;
+  line-height: 26px;
+  color: lightgray;
+  text-align: left;
+}
+
+
+.link_contact {
+  background-color: #5a98d0;
+  color: white;
+  text-decoration: none;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+hr {
+  height: 5px;
+  background-color: lightgray;
+  color: lightgray;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.contact-details {
+  font-size: 20px;
+  line-height: 30px;
+  color: #1F3F68;
+}
 
 /*.contact_us {
   font-weight: 500;
@@ -12,13 +166,9 @@ body {
   text-align: center;
 }*/
 
-.contact_us_info {
-  font-size: 20px;
-  line-height: 30px;
-  color: #1F3F68;
-}
+/* *** Другие страницы *** */
 
-.phone_info {
+/* .phone_info {
   font-size: 36px;
   text-align: center;
 }
@@ -50,149 +200,6 @@ body {
 
 .presentation {
   font-size: 25px;
-}
+} */
 
 
-.menu {
-  border: 3px solid rgb(6, 224, 6);
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-top: 20px;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.top_content {
-  border: 3px solid blue;
-  margin-left: 100px;
-  margin-right: 50%;
-  margin-top: 60px;
-  padding-bottom: 50px;
-  text-align: left;
-}
-
-.top_content p {
-  font-size: 16px;
-  line-height: 26px;
-  color: #1F3F68;
-  text-align: center;
-}
-
-.top_content h1 {
-  font-size: 64px;
-  text-align: center;
-  color: #1F3F68;
-
-}
-
-.about_our_pos {
-  border: 3px solid brown;
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-top: 300px;
-  text-align: center;
-  font-size: 36px;
-}
-
-.discription_1 {
-  border: 3px solid purple;
-  margin-top: 20px;
-  margin-left: 100px;
-  margin-right: 70%;
-  margin-bottom: 30px;
-  padding-top: 100px;
-  padding-bottom: 40px;
-  
-}
-
-.discription_1 h4 {
-  text-align: center;
-  font-size: 20px;
-  line-height: 30px;
-  color: #1F3F68;
-}
-
-.discription_1 p {
-  font-size: 16px;
-  line-height: 26px;
-  color: #1F3F68;
-  text-align: center;
-}
-
-.about_us {
-  border: 3px solid orangered;
-  margin-left: 100px;
-  margin-right: 100px;
-  text-align: center;
-  margin-bottom: 100px;
-}
-
-.about_us h4 {
-  font-size: 20px;
-  line-height: 30px;
-  color: #1F3F68;
-}
-
-.about_us p {
-  font-size: 16px;
-  line-height: 26px;
-  color: #1F3F68;
-  padding-right: 200px;
-  padding-left: 200px;
-  padding-top: 10px;
-  margin-bottom: 20px;
-}
-
-.background{
-  border: 3px solid pink;
-  background-color: #356ead;
-}
-
-.contact_us {
-  margin-left: 100px;
-  margin-right: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.content {
-  border: 3px solid white;
-  margin-top: 50px;
-  margin-right: 50%;
-  margin-bottom: 30px;
-  padding-bottom: 30px;
-}
-
-.content h3 {
-  font-size: 30px;
-  line-height: 30px;
-  color: white;
-  text-align: left;
-}
-
-.content p {
-  font-size: 16px;
-  line-height: 26px;
-  color: lightgray;
-  text-align: left;
-}
-
-.link_contact {
-  background-color: #5a98d0;
-  color: white;
-  text-decoration: none;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 60px;
-  padding-right: 60px;
-}
-
-hr {
-  height: 5px;
-  background-color: lightgray;
-  color: lightgray;
-  margin-left: 100px;
-  margin-right: 100px;
-}
